--- a/examples/zadig_2008.vcproj
+++ b/examples/zadig_2008.vcproj
@@ -353,7 +353,7 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
 			<File
-				RelativePath=".\icon1.ico"
+				RelativePath=".\zadig.ico"
 				>
 			</File>
 			<File
