--- a/examples/zadic.rc
+++ b/examples/zadic.rc
@@ -38,6 +38,6 @@ END
 
 // Must reference a manifest for visual styles and elevation
 // Oh, and it must happen at the end, or MinGW will ignore it!
-#if defined(__MINGW32__) || defined(__CYGWIN__)
+#if defined(__GNUC__)
 CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "zadic.manifest"
 #endif
