more generic manifests + use of libusb-win32_version files

--- a/examples/inf_wizard_2008.vcproj
+++ b/examples/inf_wizard_2008.vcproj
@@ -341,7 +341,7 @@
 				>
 			</File>
 			<File
-				RelativePath=".\inf_wizard.manifest"
+				RelativePath=".\common_controls.manifest"
 				>
 			</File>
 			<File
