--- a/examples/zadic.rc
+++ b/examples/zadic.rc
@@ -39,5 +39,5 @@ END
 // Must reference a manifest for visual styles and elevation
 // Oh, and it must happen at the end, or MinGW will ignore it!
 #if defined(__GNUC__)
-CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "zadic.manifest"
+CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "elevation.manifest"
 #endif
