--- a/examples/inf_wizard_rc.rc
+++ b/examples/inf_wizard_rc.rc
@@ -123,7 +123,7 @@ BEGIN
     PUSHBUTTON      "Install Now..",ID_BUTTON_INSTALLNOW, 20,140,70,15
 END
 
-ID_MANIFEST RT_MANIFEST "inf_wizard.manifest"
+ID_MANIFEST RT_MANIFEST "common_controls.manifest"
 
 #endif
 
