--- a/libwdi/libwdi_dll_2008.vcproj
+++ b/libwdi/libwdi_dll_2008.vcproj
@@ -347,6 +347,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\msapi_utf8.h"
+				>
+			</File>
+			<File
 				RelativePath=".\resource.h"
 				>
 			</File>
