fixed use of a x64 embedder when compiling x64 on 32 bit
* compile embedder as 32 bit always in MSVC
* run embedder from $(InputDir)

issue reported by Xiaofan Chen

--- a/libwdi/libwdi_dll_2008.vcproj
+++ b/libwdi/libwdi_dll_2008.vcproj
@@ -28,7 +28,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Embedding binary resources"
-				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\embedded.h"
+				CommandLine="$(InputDir)\embedder embedded.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -97,7 +97,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Embedding binary resources"
-				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\embedded.h"
+				CommandLine="$(InputDir)\embedder embedded.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -168,7 +168,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Embedding binary resources"
-				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\embedded.h"
+				CommandLine="$(InputDir)\embedder embedded.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -236,7 +236,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Embedding binary resources"
-				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\embedded.h"
+				CommandLine="$(InputDir)\embedder embedded.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
