--- a/libwdi/libwdi_static_2008.vcproj
+++ b/libwdi/libwdi_static_2008.vcproj
@@ -28,7 +28,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Embedding binary resources"
-				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\embedded.h"
+				CommandLine="$(InputDir)\embedder embedded.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -91,7 +91,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Embedding binary resources"
-				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\embedded.h"
+				CommandLine="$(InputDir)\embedder embedded.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -155,7 +155,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Embedding binary resources"
-				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\embedded.h"
+				CommandLine="$(InputDir)\embedder embedded.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
@@ -216,7 +216,7 @@
 			<Tool
 				Name="VCPreBuildEventTool"
 				Description="Embedding binary resources"
-				CommandLine="$(TargetDir)\..\helper\embedder $(InputDir)\embedded.h"
+				CommandLine="$(InputDir)\embedder embedded.h"
 			/>
 			<Tool
 				Name="VCCustomBuildTool"
