use hosts's gcc rather than target's $(CC) for embedder.exe
* this should enable the use of MinGW-w64 on 32 bit platforms

--- a/libwdi/Makefile.am
+++ b/libwdi/Makefile.am
@@ -1,8 +1,8 @@
 INCLUDES = -I$(top_srcdir)
 
 BUILT_SOURCES = embedded.h
-noinst_PROGRAMS = embedder
-noinst_EXES = embedder.exe
+noinst_PROGRAMS =
+noinst_EXES =
 lib_LTLIBRARIES = libwdi.la
 LIB_SRC = resource.h logging.h tokenizer.h installer.h libwdi.h logging.c tokenizer.c vid_data.c libwdi_dlg.c libwdi.c
 
@@ -18,15 +18,16 @@ endif
 if OPT_M64
 noinst_PROGRAMS += installer_x64
 noinst_EXES += installer_x64.exe
-installer_x64_CC = gcc $(NO_CYGWIN)
 installer_x64_SOURCES = installer.h installer.c
 installer_x64_CFLAGS = -m64 -D_WIN64 $(NO_CYGWIN) $(AM_CFLAGS)
 installer_x64_LDFLAGS = -m64 $(NO_CYGWIN) $(AM_LDFLAGS) -static
 installer_x64_LDADD = -lsetupapi -lnewdev
 endif
 
-embedder_SOURCES = embedder.h embedder_files.h embedder.c
-embedder_LDADD = -lversion
+# call host's gcc to allow 64 bit cross compilation from a 32 bit Windows host
+# as we can't use $(CC), we assert that the host's default compiler is always gcc
+embedder: embedder.h embedder_files.h embedder.c
+	gcc -o $@ -I.. embedder.c -lversion 
 
 EXTRA_DIST = $(LIB_SRC)
 
@@ -38,8 +39,8 @@ libwdi_la_LDLAGS = $(NO_CYGWIN) $(AM_LDFLAGS)
 libwdi_la_LIBADD = libwdi_rc.lo -lsetupapi -lole32
 libwdi_la_SOURCES = $(LIB_SRC)
 
-embedded.h: $(noinst_EXES)
+embedded.h: embedder $(noinst_PROGRAMS)
 	./embedder.exe embedded.h
 
 clean-local:
-	-rm -rf embedded.h
+	-rm -rf embedded.h embedder.exe
