--- a/examples/zadig.ini
+++ b/examples/zadig.ini
@@ -11,7 +11,7 @@ log_level = 0;
 // Extract driver files only, don't install (default = false)
 extract_only = false;
 
-// List all devices, including the ones that don't have a driver (default = false)
+// List all devices, including the ones that already have a driver (default = false)
 list_all = true;
 
 // Include hubs and composite parent devices when listing all (default = false)
