fixed examples resource issues
* progress bar not displaying properly for wdi-simple -b for DDK/MinGW
* missing version information from MinGW
* unneeded & missing data

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -4,7 +4,7 @@ INCLUDES = -I$(top_srcdir)
 
 noinst_PROGRAMS = zadic zadig inf-wizard wdi-simple
 
-zadic_rc.o: zadic.rc resource.h
+zadic_rc.o: zadic.rc
 	$(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(RC) $(ARCH_RCFLAGS) -static -i $< -o $@
 
 zadic_SOURCES = zadic.c
@@ -29,10 +29,10 @@ inf_wizard_CFLAGS = -I../libwdi $(ARCH_CFLAGS) $(NO_CYGWIN) $(AM_CFLAGS)
 inf_wizard_LDFLAGS = -mwindows $(NO_CYGWIN) $(AM_LDFLAGS) -static
 inf_wizard_LDADD = inf_wizard_rc.o -L../libwdi/.libs -lwdi -lcomctl32
 
-wdi_simple_rc.o: wdi-simple.rc
+wdi-simple_rc.o: wdi-simple.rc
 	$(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(RC) $(ARCH_RCFLAGS) -static -i $< -o $@
 
 wdi_simple_SOURCES = wdi-simple.c
 wdi_simple_CFLAGS = -I../libwdi $(ARCH_CFLAGS) $(NO_CYGWIN) $(AM_CFLAGS)
 wdi_simple_LDFLAGS = $(NO_CYGWIN) $(AM_LDFLAGS) -static
-wdi_simple_LDADD = wdi_simple_rc.o -L../libwdi/.libs -lwdi
+wdi_simple_LDADD = wdi-simple_rc.o -L../libwdi/.libs -lwdi
