--- a/examples/zadic.rc
+++ b/examples/zadic.rc
@@ -2,6 +2,8 @@
 #error Do not open or edit this file with App Studio
 #endif
 
+#include "afxres.h"
+
 VS_VERSION_INFO VERSIONINFO
  FILEVERSION 1,0,1,118
  PRODUCTVERSION 1,0,1,118
@@ -19,6 +21,7 @@ BEGIN
     BEGIN
         BLOCK "000904b0"
         BEGIN
+            VALUE "Comments", "http://libusb.org/wiki/libwdi"
             VALUE "CompanyName", "libusb.org"
             VALUE "FileDescription", "Zadic Application"
             VALUE "FileVersion", "1, 0, 1, 118"
