--- a/configure.ac
+++ b/configure.ac
@@ -15,26 +15,26 @@ AC_DEFINE([_GNU_SOURCE], [], [Use GNU extensions])
 WDF_VER="01009"
 AC_DEFINE_UNQUOTED([WDF_VER], ["${WDF_VER}"], [DDK WDF coinstaller version (string)])
 
-AC_ARG_WITH(ddkdir,
-	AS_HELP_STRING([--with-ddkdir], [embed WinUSB driver files from the following DDK location]),
-	DDK_DIR=$withval,
-	DDK_DIR="")
+AC_ARG_WITH([ddkdir],
+	[AS_HELP_STRING([--with-ddkdir], [embed WinUSB driver files from the following DDK location])],
+	[DDK_DIR=$withval],
+	[DDK_DIR=""])
 if test "x$DDK_DIR" != "x"; then
 	AC_DEFINE_UNQUOTED([DDK_DIR], ["${DDK_DIR}"], [embed WinUSB driver files from the following DDK location])
 fi
 
-AC_ARG_WITH(libusb0,
- 	AS_HELP_STRING([--with-libusb0], [embed libusb0 driver files from the following location]),
- 	LIBUSB0_DIR=$withval,
- 	LIBUSB0_DIR="")
+AC_ARG_WITH([libusb0],
+ 	[AS_HELP_STRING([--with-libusb0], [embed libusb0 driver files from the following location])],
+ 	[LIBUSB0_DIR=$withval],
+ 	[LIBUSB0_DIR=""])
 if test "x$LIBUSB0_DIR" != "x"; then
 	AC_DEFINE_UNQUOTED([LIBUSB0_DIR], ["${LIBUSB0_DIR}"], [embed libusb0 driver files from the following location])
 fi
 
-AC_ARG_WITH(userdir,
- 	AS_HELP_STRING([--with-userdir], [embed user defined driver files from the following location]),
- 	USER_DIR=$withval,
- 	USER_DIR="")
+AC_ARG_WITH([userdir],
+ 	[AS_HELP_STRING([--with-userdir], [embed user defined driver files from the following location])],
+ 	[USER_DIR=$withval],
+ 	[USER_DIR=""])
 if test "x$USER_DIR" != "x"; then
 	AC_DEFINE_UNQUOTED([USER_DIR], ["${USER_DIR}"], [embed user defined driver files from the following location])
 fi
@@ -58,7 +58,7 @@ case $host in
 	saved_CFLAGS="${CFLAGS}"
 	CFLAGS="${CFLAGS} -mno-cygwin"
 	AC_MSG_CHECKING([if -mno-cygwin is supported])
-	AC_TRY_COMPILE(, [;],
+	AC_TRY_COMPILE([], [;],
 		has_mno_cygwin=yes,
 		has_mno_cygwin=no)
 	if test "x$has_mno_cygwin" == "xyes"; then
@@ -73,23 +73,23 @@ case $host in
 	NO_CYGWIN="-mno-cygwin"
 	LIBCONFIG_LIBADD="-L/lib/mingw -lcrtdll -lmingwex"
 	LIBCONFIG_CFLAGS="-static -I/usr/include/mingw -D__MINGW_FEATURES__"
-	;;	
+	;;
 *)
 	AC_MSG_ERROR([unsupported development environment])
 esac
 
 AM_LDFLAGS="-no-undefined -avoid-version"
-AC_CHECK_TOOL(RC, windres, no)
+AC_CHECK_TOOL([RC], [windres], [no])
 
 # cross compiling support
 if test "x$CC_FOR_BUILD" == "x"; then
 	if test "x$cross_compiling" == "xyes"; then
-		AC_CHECK_PROGS(CC_FOR_BUILD, gcc, cc)
+		AC_CHECK_PROGS([CC_FOR_BUILD], [gcc], [cc])
 	else
 		CC_FOR_BUILD="$CC"
 	fi
 fi
-AC_SUBST(CC_FOR_BUILD)
+AC_SUBST([CC_FOR_BUILD])
 
 # detect if the host's CC_FOR_BUILD actually produces executables that run
 # (this is required for the embedder)
@@ -103,14 +103,11 @@ CC="${CC_FOR_BUILD}"
 CFLAGS=""
 LDFLAGS=""
 AC_MSG_CHECKING([whether the build compiler can produce executables that run on this host])
-AC_RUN_IFELSE(AC_LANG_PROGRAM([]),[
-	AC_MSG_RESULT([yes])
-	cc_for_build_ok="yes"
-	],
-	[
-	AC_MSG_RESULT([no])
-	cc_for_build_ok="no"
-	])
+AC_RUN_IFELSE([AC_LANG_PROGRAM([])],
+	[AC_MSG_RESULT([yes])
+	 cc_for_build_ok="yes"],
+	[AC_MSG_RESULT([no])
+	 cc_for_build_ok="no"])
 CC="${saved_CC}"
 CFLAGS="${saved_CFLAGS}"
 LDFLAGS="${saved_LDFLAGS}"
@@ -126,9 +123,9 @@ fi
 saved_CFLAGS="${CFLAGS}"
 CFLAGS="${CFLAGS} -m32"
 AC_MSG_CHECKING([whether the compiler can produce 32 bit binaries])
-AC_TRY_COMPILE(, [;],
-	compiler_has_m32=yes,
-	compiler_has_m32=no)
+AC_TRY_COMPILE([], [;],
+	[compiler_has_m32=yes],
+	[compiler_has_m32=no])
 if test "x$compiler_has_m32" == "xyes"; then
 	AC_MSG_RESULT([yes])
 else
@@ -140,9 +137,9 @@ CFLAGS="${saved_CFLAGS}"
 saved_CFLAGS="${CFLAGS}"
 CFLAGS="${CFLAGS} -m64"
 AC_MSG_CHECKING([whether the compiler can produce 64 bit binaries])
-AC_TRY_COMPILE(, [;],
-	compiler_has_m64=yes,
-	compiler_has_m64=no)
+AC_TRY_COMPILE([], [;],
+	[compiler_has_m64=yes],
+	[compiler_has_m64=no])
 if test "x$compiler_has_m64" == "xyes"; then
 	AC_MSG_RESULT([yes])
 else
@@ -158,12 +155,12 @@ fi
 AC_ARG_ENABLE([32bit], [AS_HELP_STRING([--enable-32bit],
 	[build 32 bit compatible library (default y)])],
 	[enable_32bit=$enableval],
-	[enable_32bit='yes'])	
-AC_ARG_ENABLE([64bit], [AS_HELP_STRING([--enable-64bit], 
+	[enable_32bit='yes'])
+AC_ARG_ENABLE([64bit], [AS_HELP_STRING([--enable-64bit],
 	[build 64 bit compatible library (default y)])],
 	[enable_64bit='$enableval'],
 	[enable_64bit='yes'])
-AC_ARG_ENABLE([ia64], [AS_HELP_STRING([--enable-ia64], 
+AC_ARG_ENABLE([ia64], [AS_HELP_STRING([--enable-ia64],
 	[embed IA64/Itanium driver files (default n)])],
 	[enable_ia64='$enableval'],
 	[enable_ia64='no'])
@@ -191,17 +188,17 @@ fi
 # define the automake and config.h variables
 if test "x$enable_32bit" != "xno"; then
 	AC_DEFINE([OPT_M32], [], [32 bit support])
-	AC_SUBST(OPT_M32)
+	AC_SUBST([OPT_M32])
 fi
 AM_CONDITIONAL([OPT_M32], [test "x$enable_32bit" != "xno"])
 if test "x$enable_64bit" != "xno"; then
 	AC_DEFINE([OPT_M64], [], [64 bit support])
-	AC_SUBST(OPT_M64)	
+	AC_SUBST([OPT_M64])
 fi
 AM_CONDITIONAL([OPT_M64], [test "x$enable_64bit" != "xno"])
 if test "x$enable_ia64" != "xno"; then
 	AC_DEFINE([OPT_IA64], [], [embed IA64 driver files])
-	AC_SUBST(OPT_IA64)	
+	AC_SUBST([OPT_IA64])
 fi
 
 if test "x$enable_64bit" != "xno"; then
@@ -211,7 +208,7 @@ if test "x$enable_64bit" != "xno"; then
 		AC_MSG_NOTICE([if you want to produce 64 bit only library and samples, use --disable-32bit])
 		ARCH_CFLAGS="-m32"
 		ARCH_RCFLAGS="--target=pe-i386"
-		
+
 	else
 		AC_MSG_WARN([will produce a 64 bit library that is INCOMPATIBLE with 32 bit platforms])
 		ARCH_CFLAGS="-m64 -D_WIN64"
@@ -221,7 +218,7 @@ else
 	AC_MSG_WARN([will produce a 32 bit library that is INCOMPATIBLE with 64 bit platforms])
 	ARCH_CFLAGS=""
 	ARCH_RCFLAGS=""
-	
+
 fi
 AC_SUBST([ARCH_CFLAGS])
 AC_SUBST([ARCH_RCFLAGS])
@@ -233,19 +230,19 @@ then
 		# check that the required WinUSB DDK files are available
 		if test "x$enable_64bit" != "xno"; then
 		# NB: I found the hard way that cygwin doesn't like multiple files to be provided on multiple lines - YOU HAVE BEEN WARNED!
-		AC_CHECK_FILES([$DDK_DIR/redist/wdf/amd64/WdfCoInstaller${WDF_VER}.dll $DDK_DIR/redist/winusb/amd64/winusbcoinstaller2.dll],,
+		AC_CHECK_FILES([$DDK_DIR/redist/wdf/amd64/WdfCoInstaller${WDF_VER}.dll $DDK_DIR/redist/winusb/amd64/winusbcoinstaller2.dll], [],
 			[AC_MSG_ERROR([the WinUSB amd64 driver files could not be detected (--with-ddkdir)])])
 		fi
 		if test "x$enable_32bit" != "xno"; then
-		AC_CHECK_FILES([$DDK_DIR/redist/wdf/x86/WdfCoInstaller${WDF_VER}.dll $DDK_DIR/redist/winusb/x86/winusbcoinstaller2.dll],,
+		AC_CHECK_FILES([$DDK_DIR/redist/wdf/x86/WdfCoInstaller${WDF_VER}.dll $DDK_DIR/redist/winusb/x86/winusbcoinstaller2.dll], [],
 			[AC_MSG_ERROR([the WinUSB x86 driver files could not be detected (--with-ddkdir)])])
 		fi
 		if test "x$enable_ia64" != "xno"; then
-		AC_CHECK_FILES([$DDK_DIR/redist/wdf/ia64/WdfCoInstaller${WDF_VER}.dll $DDK_DIR/redist/winusb/ia64/winusbcoinstaller2.dll],,
+		AC_CHECK_FILES([$DDK_DIR/redist/wdf/ia64/WdfCoInstaller${WDF_VER}.dll $DDK_DIR/redist/winusb/ia64/winusbcoinstaller2.dll], [],
 			[AC_MSG_ERROR([the WinUSB ia64 driver files could not be detected (--with-ddkdir)])])
 		fi
 	fi
-	
+
 	if test "x$LIBUSB0_DIR" != "x"; then
 		# check that the required libusb0 driver files are available
 		AC_CHECK_FILES([$LIBUSB0_DIR/bin/x86/libusb0.sys $LIBUSB0_DIR/bin/x86/libusb0_x86.dll],,
@@ -270,7 +267,7 @@ AC_ARG_ENABLE([log], [AS_HELP_STRING([--enable-log], [enable logging (default y)
 	[log_enabled=$enableval],
 	[log_enabled='yes'])
 if test "x$log_enabled" != "xno"; then
-	AC_DEFINE([ENABLE_LOGGING], 1, [Message logging])
+	AC_DEFINE([ENABLE_LOGGING], [1], [Message logging])
 fi
 
 AC_ARG_ENABLE([debug-log], [AS_HELP_STRING([--enable-debug-log],
@@ -284,10 +281,10 @@ AC_ARG_ENABLE([toggable-debug], [AS_HELP_STRING([--enable-toggable-debug],
 	[toggable_debug='no'])
 
 if test "x$debug_log_enabled" != "xno"; then
-	AC_DEFINE([ENABLE_DEBUG_LOGGING], 1, [Debug message logging (forced)])
+	AC_DEFINE([ENABLE_DEBUG_LOGGING], [1], [Debug message logging (forced)])
 else
 	if test "x$toggable_debug" != "xno"; then
-		AC_DEFINE([INCLUDE_DEBUG_LOGGING], 1, [Debug message logging (toggable)])
+		AC_DEFINE([INCLUDE_DEBUG_LOGGING], [1], [Debug message logging (toggable)])
 	fi
 fi
 
@@ -311,18 +308,18 @@ AM_CONDITIONAL([BUILD_EXAMPLES], [test "x$build_examples" != "xno"])
 # check for -Wno-pointer-sign compiler support (GCC >= 4)
 saved_CFLAGS="${CFLAGS}"
 CFLAGS="$CFLAGS -Wno-pointer-sign"
-AC_COMPILE_IFELSE(AC_LANG_PROGRAM([]),
-	nopointersign_cflags="-Wno-pointer-sign", nopointersign_cflags="")
+AC_COMPILE_IFELSE([AC_LANG_PROGRAM([])],
+	[nopointersign_cflags="-Wno-pointer-sign"], [nopointersign_cflags=""])
 CFLAGS="${saved_CFLAGS}"
 
 AM_CFLAGS="$AM_CFLAGS -std=gnu99 -Wall -Wundef -Wunused -Wstrict-prototypes -Werror-implicit-function-declaration $nopointersign_cflags"
 
-AC_SUBST(VISIBILITY_CFLAGS)
-AC_SUBST(AM_CFLAGS)
-AC_SUBST(AM_LDFLAGS)
-AC_SUBST(NO_CYGWIN)
-AC_SUBST(LIBCONFIG_CFLAGS)
-AC_SUBST(LIBCONFIG_LIBADD)
+AC_SUBST([VISIBILITY_CFLAGS])
+AC_SUBST([AM_CFLAGS])
+AC_SUBST([AM_LDFLAGS])
+AC_SUBST([NO_CYGWIN])
+AC_SUBST([LIBCONFIG_CFLAGS])
+AC_SUBST([LIBCONFIG_LIBADD])
 
 AC_CONFIG_FILES([Makefile] [libwdi/Makefile] [examples/libconfig/Makefile] [examples/Makefile])
 AC_OUTPUT
