--- a/libwdi/libwdi_dll_2008.vcproj
+++ b/libwdi/libwdi_dll_2008.vcproj
@@ -367,6 +367,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\libwdi.def"
+				>
+			</File>
+			<File
 				RelativePath=".\libwdi.rc"
 				>
 			</File>
