--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,36 @@
+*.aps
+*.dep
+*.exe
+*.htm
+*.idb
 *.la
+*.lib
 *.lo
+*.log
+*.m4
+*.mac
+*.manifest
 *.ncb
 *.o
+*.obj
 *.opt
 *.pc
+*.pdb
 *.plg
+*.res
+*.suo
 *.swp
 *.user
 .deps
 .libs
 Debug
+INSTALL
 Makefile
 Makefile.in
 Release
 aclocal.m4
 autom4te.cache
+build64.h
 compile
 config.guess
 config.h*
@@ -23,8 +39,10 @@ config.status
 config.sub
 configure
 depcomp
+embedded.h
 install-sh
 libtool
 ltmain.sh
 missing
+sources
 stamp-h1
