added certificate installation support in zadig.c
* cert can be provided in ini file with the install_cert option
* default cert installation warning can also be disabled from ini
* by setting disable_cert_install_warning option to true

--- a/examples/zadig.ini
+++ b/examples/zadig.ini
@@ -26,3 +26,6 @@ default_driver = 0;
 
 // Set the default destination directory for extraction of the driver files (default = "C:\\usb_driver")
 default_dir = "C:\\usb_driver";
+
+// If embedded, install the following certificate to the Trusted Publisher store
+// install_cert = "mycert.cer";
