[git] updated .gitattributes to use eol=lf/crlf where needed
IMPORTANT NOTE: git version must be >= 1.7.4!!

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,9 @@
-*.sh -crlf
-*.ac -crlf
-*.am -crlf
-.gitattributes export-ignore
-.gitignore export-ignore
-*.sh export-ignore
+*.sh            eol=lf
+*.ac            eol=lf
+*.am            eol=lf
+*.sln           eol=crlf
+*.vcproj        eol=crlf
+*.vcxproj*      eol=crlf
+*.sh            export-ignore
+.gitattributes  export-ignore
+.gitignore      export-ignore
