[zadig] removed libconfig dependency
* use Kerberos/e2fsprogs profile
* format of the zadig.ini and zadig preset files has changed

--- a/configure.ac
+++ b/configure.ac
@@ -349,5 +349,5 @@ AC_SUBST([NO_CYGWIN])
 AC_SUBST([LIBCONFIG_CFLAGS])
 AC_SUBST([LIBCONFIG_LIBADD])
 
-AC_CONFIG_FILES([Makefile] [libwdi/Makefile] [examples/libconfig/Makefile] [examples/Makefile])
+AC_CONFIG_FILES([Makefile] [libwdi/Makefile] [examples/Makefile])
 AC_OUTPUT
