--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,5 +1,3 @@
-SUBDIRS = libconfig
-
 INCLUDES = -I$(top_srcdir)
 
 noinst_PROGRAMS = zadic zadig inf-wizard wdi-simple
@@ -16,10 +14,10 @@ zadic_LDADD = zadic_rc.o -L../libwdi/.libs -lwdi
 zadig_rc.o: zadig.rc resource.h
 	$(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(RC) $(ARCH_RCFLAGS) -static -i $< -o $@
 
-zadig_SOURCES = zadig.c zadig_stdlg.c
+zadig_SOURCES = zadig.c zadig_stdlg.c profile.c
 zadig_CFLAGS = -I../libwdi $(ARCH_CFLAGS) $(NO_CYGWIN) $(AM_CFLAGS)
 zadig_LDFLAGS = -mwindows $(NO_CYGWIN) $(AM_LDFLAGS) -static
-zadig_LDADD = zadig_rc.o -L../libwdi/.libs -L./libconfig/.libs -lwdi -lconfig
+zadig_LDADD = zadig_rc.o -L../libwdi/.libs -lwdi
 
 inf_wizard_rc.o: inf_wizard_rc.rc
 	$(LIBTOOL) $(AM_LIBTOOLFLAGS) $(LIBTOOLFLAGS) --mode=compile $(RC) $(ARCH_RCFLAGS) -static -i $< -o $@
