--- a/examples/sample.cfg
+++ b/examples/sample.cfg
@@ -1,8 +1,6 @@
-// This is a sample preset device configuration for Zadig
-
-device = {
-  Description = "Sample Device"; 
-  VID = 0xABCD;
-  PID = 0x1234;
-  MI = 0x00;
-};
+# This is a sample preset device configuration for Zadig
+[device]
+  Description = "Sample Device"
+  VID = 0xABCD
+  PID = 0x1234
+  MI = 0x01
