--- a/examples/zadig_2010.vcxproj.filters
+++ b/examples/zadig_2010.vcxproj.filters
@@ -21,11 +21,11 @@
     <ClCompile Include="zadig_stdlg.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="profile.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="libconfig\libconfig.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\libwdi\msapi_utf8.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -33,6 +33,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="zadig.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="profile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
