--- a/libwdi/Makefile.am
+++ b/libwdi/Makefile.am
@@ -18,7 +18,7 @@ noinst_EXES += installer_x86.exe
 installer_x86_SOURCES = installer.h installer.c
 installer_x86_CFLAGS = -m32 $(NO_CYGWIN) $(AM_CFLAGS)
 installer_x86_LDFLAGS = -m32 $(NO_CYGWIN) $(AM_LDFLAGS) -static
-installer_x86_LDADD = -lsetupapi -lnewdev
+installer_x86_LDADD = -lsetupapi -lnewdev -lole32
 endif
 
 if OPT_M64
@@ -27,7 +27,7 @@ noinst_EXES += installer_x64.exe
 installer_x64_SOURCES = installer.h installer.c
 installer_x64_CFLAGS = -m64 -D_WIN64 $(NO_CYGWIN) $(AM_CFLAGS)
 installer_x64_LDFLAGS = -m64 $(NO_CYGWIN) $(AM_LDFLAGS) -static
-installer_x64_LDADD = -lsetupapi -lnewdev
+installer_x64_LDADD = -lsetupapi -lnewdev -lole32
 endif
 
 # call host's CC to allow for cross compilation
