[msvc] removed libconfig references in VS2008 project files

--- a/examples/zadig_2008.vcproj
+++ b/examples/zadig_2008.vcproj
@@ -317,6 +317,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\profile.c"
+				>
+			</File>
+			<File
 				RelativePath=".\zadig.c"
 				>
 			</File>
@@ -331,7 +335,7 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
-				RelativePath=".\libconfig\libconfig.h"
+				RelativePath=".\profile.h"
 				>
 			</File>
 			<File
