--- a/libwdi/.msvc/libwdi_dll_2008.vcproj
+++ b/libwdi/.msvc/libwdi_dll_2008.vcproj
@@ -323,6 +323,10 @@ embedder embedded.h"
 				>
 			</File>
 			<File
+				RelativePath="..\pki.c"
+				>
+			</File>			
+			<File
 				RelativePath="..\tokenizer.c"
 				>
 			</File>
@@ -354,6 +358,10 @@ embedder embedded.h"
 			</File>
 			<File
 				RelativePath="..\msapi_utf8.h"
+				>
+			</File>
+			<File
+				RelativePath="..\mssign32.h"
 				>
 			</File>
 			<File
