--- a/libwdi/.msvc/libwdi_static_2008.vcproj
+++ b/libwdi/.msvc/libwdi_static_2008.vcproj
@@ -296,6 +296,10 @@ embedder embedded.h"
 				>
 			</File>
 			<File
+				RelativePath="..\pki.c"
+				>
+			</File>
+			<File
 				RelativePath="..\tokenizer.c"
 				>
 			</File>
@@ -327,6 +331,10 @@ embedder embedded.h"
 			</File>
 			<File
 				RelativePath="..\msapi_utf8.h"
+				>
+			</File>
+			<File
+				RelativePath="..\mssign32.h"
 				>
 			</File>
 			<File
